--- a/main.html
+++ b/main.html
@@ -10,7 +10,22 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+ <section class="testimonial-container">
+        <div class="testimonial">
+            <p class="testimonial-text">"This product has changed my life! I can't imagine going back to the way things were before."</p>
+            <p class="testimonial-author">- John Doe</p>
+        </div>
 
+        <div class="testimonial">
+            <p class="testimonial-text">"Excellent service, top-notch quality, and the team was incredibly responsive."</p>
+            <p class="testimonial-author">- Jane Smith</p>
+        </div>
+
+        <div class="testimonial">
+            <p class="testimonial-text">"Highly recommend this to anyone looking to improve their workflow. Fantastic!"</p>
+            <p class="testimonial-author">- Sarah Lee</p>
+        </div>
+    </section>
 </body>
 
 </html>
