--- a/main.html
+++ b/main.html
@@ -8,24 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="main">
+		<h1>Testimonial</h1>
+		<div class="one">
+		<p>This product is amazing! I highly recommend it to anyone in need of a solution like this</p>
+			<p class="author">-John Doe</p>
+		</div>
+		<div class="one">
+			<p>I have been using this for a few weeks now and it has completely transformed my workflow.</p>
+			<p class="author">-John Smith</p>
+		</div>
+		
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
- <section class="testimonial-container">
-        <div class="testimonial">
-            <p class="testimonial-text">"This product has changed my life! I can't imagine going back to the way things were before."</p>
-            <p class="testimonial-author">- John Doe</p>
-        </div>
 
-        <div class="testimonial">
-            <p class="testimonial-text">"Excellent service, top-notch quality, and the team was incredibly responsive."</p>
-            <p class="testimonial-author">- Jane Smith</p>
-        </div>
-
-        <div class="testimonial">
-            <p class="testimonial-text">"Highly recommend this to anyone looking to improve their workflow. Fantastic!"</p>
-            <p class="testimonial-author">- Sarah Lee</p>
-        </div>
-    </section>
 </body>
 
 </html>
